Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_while_1_rte_altergo.txt
[kernel] Parsing while_1_rte.c (with preprocessing)
[kernel] while_1_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing while_1.c (with preprocessing)
  3     [kernel] while_1.c:2:
[kernel] Frama-C aborted: invalid user input.
